--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -80,7 +80,7 @@
 <!--Work-->
 <div class="section scrollspy" id="events">
     <div class="container">
-        <h2 class="header text_b">Eventos</h2>
+        <h2 class="header text_b">Eventos cadastrados</h2>
         <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card">
@@ -143,7 +143,7 @@
 <!--Register-->
 <div class="section scrollspy" id="forms">
     <div class="container">
-        <h2 class="header text_b"> Inscrever um evento </h2>
+        <h2 class="header text_b"> Seu evento no Code Across 2016</h2>
         <div class="row">
             <form class="col s12" method="post">
                 <div class="row">
