--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -23,13 +23,11 @@
                     <li><a href="#top">Início</a></li>
                     <li><a href="#events">Eventos</a></li>
                     <li><a href="#forms">Inscrição</a></li>
-                    <li><a href="#tools">Material</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#top">Início</a></li>
                     <li><a href="#events">Eventos</a></li>
                     <li><a href="#forms">Inscrição</a></li>
-                    <li><a href="#tools">Material</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
@@ -82,7 +80,7 @@
     <div class="container">
         <h2 class="header text_b">Eventos cadastrados</h2>
         <div class="row">
-            <div class="col s12 m4 l4">
+            <div class="col s12 m6 l6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="img/project1.jpg">
@@ -98,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4 l4">
+            <div class="col s12 m6 l6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="img/project2.jpeg">
@@ -114,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4 l4">
+            <div class="col s12 m6 l6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="img/project3.png">
@@ -315,7 +313,7 @@
 </div-->
 
 <!--Footer-->
-<footer id="contact" class="page-footer default_color scrollspy">
+<footer id="footer" class="page-footer default_color scrollspy">
     <div class="container">  
         <div class="row">
             <div class="col l9 s12">
@@ -343,7 +341,7 @@
                         </div>
                     </div>
                 </form-->
-                <h5 class="white-text">Material</h5>
+                <h5 class="white-text">Organize seu evento</h5>
                 <ul>
                     <li>
                         <a target="_blank" class="white-text" href="http://www.codeforamerica.org/events/codeacross-2016/">
