--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -22,11 +22,13 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#top">Início</a></li>
                     <li><a href="#events">Eventos</a></li>
+                    <li><a href="#intro">O que é</a></li>
                     <li><a href="#forms">Inscrição</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#top">Início</a></li>
                     <li><a href="#events">Eventos</a></li>
+                    <li><a href="#intro">O que é</a></li>
                     <li><a href="#forms">Inscrição</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
@@ -42,43 +44,9 @@
     </div>
 </div>
 
-<!--Intro and service-->
-<div id="intro" class="section scrollspy">
-    <div class="container">
-        <div class="row">
-            <div  class="col s12">
-                <h2 class="center header text_h2">No fim de semana de <span class="span_h2">5-6 de março de 2016</span>, o CodeForAmerica irá realizar o seu quinto evento anual CodeAcross, e o <span class="span_h2">CodeForBrazil</span> participará pelo segundo ano.</h2>
-            </div>
-
-            <div  class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-action-language"></i>
-                    <h5 class="promo-caption">Dia Internacional ds Dados Abertos</h5>
-                    <p class="light center">CodeAcross é um fim de semana de eventos de hackers cívicos realizados por nossa rede em todo o mundo. Ele está programado para coincidir com o Dia Internacional ds Dados Abertos.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-action-extension"></i>
-                    <h5 class="promo-caption">CodeForBrazil</h5>
-                    <p class="light center">O objetivo do CodeAcross é ativar a rede do CodeForBrazil e do CodeForAmerica e inspirar residentes em todos os lugares a se envolverem ativamente em sua comunidade.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">Quem deve participar?</h5>
-                    <p class="light center">Urbanistas, hackers civicos, funcionários do governo, desenvolvedores, designers, lideres comunitários, e qualquer pessoa com a paixão de fazer sua cidade uma cidade melhor.</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
 <!--Work-->
 <div class="section scrollspy" id="events">
     <div class="container">
-        <h2 class="header text_b">Eventos cadastrados</h2>
         <div class="row">
             <div class="col s12 m6 l6">
                 <div class="card">
@@ -132,6 +100,40 @@
     </div>
 </div>
 
+<!--Intro and service-->
+<div id="intro" class="section scrollspy">
+    <div class="container">
+        <div class="row">
+            <div  class="col s12">
+                <h2 class="center header text_h2">No fim de semana de <span class="span_h2">5-6 de março de 2016</span>, o CodeForAmerica irá realizar o seu quinto evento anual CodeAcross, e o <span class="span_h2">CodeForBrazil</span> participará pelo segundo ano.</h2>
+            </div>
+
+            <div  class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-action-language"></i>
+                    <h5 class="promo-caption">Dia Internacional ds Dados Abertos</h5>
+                    <p class="light center">CodeAcross é um fim de semana de eventos de hackers cívicos realizados por nossa rede em todo o mundo. Ele está programado para coincidir com o Dia Internacional ds Dados Abertos.</p>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-action-extension"></i>
+                    <h5 class="promo-caption">CodeForBrazil</h5>
+                    <p class="light center">O objetivo do CodeAcross é ativar a rede do CodeForBrazil e do CodeForAmerica e inspirar residentes em todos os lugares a se envolverem ativamente em sua comunidade.</p>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-social-group"></i>
+                    <h5 class="promo-caption">Quem deve participar?</h5>
+                    <p class="light center">Urbanistas, hackers civicos, funcionários do governo, desenvolvedores, designers, lideres comunitários, e qualquer pessoa com a paixão de fazer sua cidade uma cidade melhor.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 
 <!--Parallax-->
 <div class="parallax-container">
@@ -141,7 +143,8 @@
 <!--Register-->
 <div class="section scrollspy" id="forms">
     <div class="container">
-        <h2 class="header text_b"> Seu evento no Code Across 2016</h2>
+        <h2 class="header text_b"> Seu evento no Code Across</h2>
+        <h5> Cadastre seu evento para fazer parte da programação e da divulgação do Code Across Brazil 2016. </h5>
         <div class="row">
             <form class="col s12" method="post">
                 <div class="row">
