Reviewing buttons color + add Donate button

--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -169,7 +169,7 @@
                         <label for="icon_prefix">Website</label>
                     </div>
                     <div class="file-field input-field col s6">
-                        <div class="btn">
+                        <div class="btn waves-effect waves-light light-blue darken-1">
                             <i class="mdi-editor-insert-photo"></i>
                             <input type="file" name="image">
                         </div>
@@ -193,7 +193,7 @@
                         <label for="icon_prefix2">Descrição</label>
                     </div>
                     <div class="col offset-s7 s5">
-                        <button class="btn waves-effect waves-light red darken-1" type="submit">Mandar
+                        <button class="btn waves-effect waves-light light-blue darken-1" type="submit">Mandar
                             <i class="mdi-content-send right white-text"></i>
                         </button>
                     </div>
@@ -377,6 +377,11 @@
                         </a>
                     </li>
                     <li>
+                        <a target="_blank" class="white-text" href="http://www.meetup.com/pt-BR/OpenBrazil/">
+                            <i class="small fa fa-square white-text"></i> Meetup
+                        </a>
+                    </li>
+                    <li>
                         <a target="_blank" class="white-text" href="https://www.openbrazil.org">
                             <i class="small fa fa-link white-text"></i> Code For Brazil
                         </a>
@@ -386,6 +391,12 @@
                             <i class="small fa fa-link white-text"></i> Code For America
                         </a>
                     </li>
+                    <li>
+                        <p>
+                            <a class="btn waves-effect waves-light yellow lighten-3 blue-grey-text" type="submit">Buy us a drink</a>
+                        </p>
+                    </li>
+
                 </ul>
             </div>
         </div>
