Adding links and logos to c4 c4b c4cwb

--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2">No fim de semana de <span class="span_h2">5-6 de março de 2016</span>, o CodeForAmerica irá realizar o seu quinto evento anual CodeAcross, e o <span class="span_h2">CodeForBrazil</span> participará pelo segundo ano.</h2>
+                <h2 class="center header text_h2">No fim de semana de <span class="span_h2">5-6 de março de 2016</span>, o CodeForAmerica irá realizar o seu quinto evento anual CodeAcross, e o <span class="span_h2">OpenBrazil [&lt;o&gt;] CodeForBrazil</span> participará pelo segundo ano.</h2>
             </div>
 
             <div  class="col s12 m4 l4">
@@ -74,8 +74,8 @@
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-action-extension"></i>
-                    <h5 class="promo-caption">CodeForBrazil</h5>
-                    <p class="light center">O objetivo do CodeAcross é ativar a rede do CodeForBrazil e do CodeForAmerica e inspirar residentes em todos os lugares a se envolverem ativamente em sua comunidade.</p>
+                    <h5 class="promo-caption">OpenBrazil [&lt;o&gt;] CodeForBrazil</h5>
+                    <p class="light center">O objetivo do CodeAcross é ativar a rede do CodeForAmerica e inspirar residentes em todos os lugares a se envolverem ativamente em sua comunidade.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
@@ -86,7 +86,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
@@ -95,6 +94,36 @@
 <div class="parallax-container">
     <div class="parallax"><img src="img/hackathon.jpg"></div>
 </div>
+
+
+<div id="partners" class="section scrollspy">
+    <div class="container">
+        <div class="row">
+            <div  class="col s12 m4 l4">
+                <div class="center partners">
+                    <a href="http://www.openbrazil.org" title="OpenBrazil website">
+                        <img src="img/c4b.png" alt="OpenBrazil [<o>] CodeForBrazil" title="OpenBrazil website" class="logo"/>
+                    </a>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center partners">
+                    <a href="http://www.codeforamerica.org" title="Code For America website">
+                        <img src="img/c4a.png" alt="Code For America" title="Code For America website" class="logo"/>
+                    </a>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center partners">
+                    <a href="https://www.facebook.com/Code-For-Curitiba-728703680591258" title="Code For Curitiba website">
+                        <img src="img/c4cwb.png" alt="Code For Curitiba" title="Code For Curitiba website" class="logo"/>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!--Register-->
 <div class="section scrollspy" id="forms">
@@ -275,7 +304,7 @@
 <footer id="footer" class="page-footer default_color scrollspy">
     <div class="container">  
         <div class="row">
-            <div class="col l9 s12">
+            <div class="col l4 s12">
                 <!--form class="col s12" action="contact.php" method="post">
                     <div class="row">
                         <div class="input-field col s6">
@@ -319,7 +348,33 @@
                     </li>
                 </ul>
             </div>
-            <div class="col l3 s12">
+            <div class="col l4 s12">
+                <h5 class="white-text">OpenBrazil [&lt;o&gt;] CodeForBrazil</h5>
+                <ul>
+                    <li>
+                        <a target="_blank" class="white-text" href="https://www.openbrazil.org">
+                            <i class="small fa fa-link white-text"></i> Code For Brazil
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" class="white-text" href="http://www.meetup.com/pt-BR/OpenBrazil/">
+                            <i class="small fa fa-square white-text"></i> Meetup
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" class="white-text" href="https://www.codeforamerica.org">
+                            <i class="small fa fa-link white-text"></i> Code For America
+                        </a>
+                    </li>
+                    <li>
+                        <p>
+                            <a class="seja-parceiro btn waves-effect waves-light yellow lighten-3 blue-grey-text" href="#">Seja um parceiro</a>
+                        </p>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="col l4 s12">
                 <h5 class="white-text">Code For Curitiba</h5>
                 <ul>
                     <li>
@@ -338,18 +393,13 @@
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" class="white-text" href="https://www.openbrazil.org">
-                            <i class="small fa fa-link white-text"></i> Code For Brazil
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" class="white-text" href="https://www.codeforamerica.org/">
-                            <i class="small fa fa-link white-text"></i> Code For America
+                        <a target="_blank" class="white-text" href="http://www.codeforamerica.org/brigade/Code-for-Curitiba/">
+                            <i class="small fa fa-link white-text"></i> Code For Curitiba
                         </a>
                     </li>
                     <li>
                         <p>
-                            <a class="btn waves-effect waves-light yellow lighten-3 blue-grey-text" type="submit">Buy us a drink</a>
+                            <a class="buy-drink btn waves-effect waves-light yellow lighten-3 blue-grey-text" href="#">Buy us a drink</a>
                         </p>
                     </li>
 
